--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "pesolibre-holders-testnet",
+  "name": "masterWallet-subgraph-testnet",
   "license": "UNLICENSED",
   "scripts": {
     "codegen": "graph codegen",
     "build": "graph build",
-    "deploy": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ gperezalba/pesolibre-holders-testnet",
-    "create-local": "graph create --node http://localhost:8020/ gperezalba/pesolibre-holders-testnet",
-    "remove-local": "graph remove --node http://localhost:8020/ gperezalba/pesolibre-holders-testnet",
-    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 gperezalba/pesolibre-holders-testnet"
+    "deploy": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ gperezalba/masterWallet-subgraph-testnet",
+    "create-local": "graph create --node http://localhost:8020/ gperezalba/masterWallet-subgraph-testnet",
+    "remove-local": "graph remove --node http://localhost:8020/ gperezalba/masterWallet-subgraph-testnet",
+    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 gperezalba/masterWallet-subgraph-testnet"
   },
   "dependencies": {
-    "@graphprotocol/graph-cli": "^0.18.0",
+    "@graphprotocol/graph-cli": "0.17.1",
     "@graphprotocol/graph-ts": "0.17.0"
   }
 }
